# PickMoji

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  app.rc.in  app_controller.cpp  app_controller.h  emoji_canvas.cpp  emoji_canvas.h  emoji_keywords.h  emoji_repository.cpp  emoji_repository.h  main.cpp  picker_window.cpp  picker_window.h  resources.qrc  single_instance.cpp  single_instance.h  update_checker.cpp  update_checker.h  usage_store.cpp  usage_store.h  windows_integration.cpp  windows_integration.h
data/: emoji.json
keywords/: README.md  de.json.example
packaging/installer/: PickMoji.iss  build-installer.ps1
packaging/msix/: AppxManifest.xml  build-msix.ps1
packaging/portable/: build-portable.ps1
tests/: smoke_test.cpp
tools/: generate_emoji_data.py  generate_icon.py  import_twemoji_flags.py
